# fitness-clubs-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/apps/clubs/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/clubs/migrations/: 0001_initial.py
backend/apps/memberships/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/memberships/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  models.py  premissions.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_phone.py
backend/apps/workouts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/workouts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/assets/Icons/: Icons.jsx
client/src/components/: Header.jsx  MembershipCard.jsx  MembershipsSlide.jsx  Test.jsx  clubs.js  memberships.js  newsCards.js  promo.js  trainers.js
client/src/pages/: AccountPage.jsx  ClubPage.jsx  FAQPage.jsx  MainPage.jsx  NewsPage.jsx  PromotionsPage.jsx  RegistrationForm.jsx  TariffsPage.jsx
